# ViolaExMachina

./: .gitmodules  Cargo.toml  README.md
.github/readmes/: README-Linux.txt  README-Mac.txt  README-Windows.txt
.github/workflows/: build.yml
au/: CMakeLists.txt  README.md
plugin/: Cargo.toml  README.md  bundler.toml
plugin/src/: editor.rs  help.md  lib.rs  main.rs
synth/: Cargo.toml  README.md
synth/src/: director.rs  filter.rs  instrument.rs  lib.rs  random.rs  resampler.rs  reverb.rs
synth/src/data/: bass.flac  bow_noise.flac  cello.flac  viola.flac  violin.flac
synth/tests/: test_filter.rs  test_random.rs  test_resampler.rs  test_reverb.rs
xtask/: Cargo.toml
