[package]
name = "viola_ex_machina"
version = "1.0.0"
edition = "2021"
homepage = "https://github.com/peastman/ViolaExMachina"
description = "A physically inspired synthesizer for stringed instruments"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
synth = { path = "../synth" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95", features = ["standalone"] }
nih_plug_egui = { git = "https://codeberg.org/BillyDM/egui-baseview", branch = "egui_33" }
egui_extras = { version = "0.33.0", features = ["default", "all_loaders"] }
egui_commonmark = "0.22.0"
image = { version = "0.25.9", features = ["png"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
